# room

./: BACKLOG.md  CONTINUE.md  CONTINUE.txt  Cargo.toml  DOCS_TO_UPDATE.md  GRID_API_CHANGES.md  GRID_API_PROPOSAL.md  GRID_LAYOUT.md  GRID_NOTES.md  GRID_ROADMAP.md  GRID_STATUS.md  IDEAS.md  META_PROCESS.txt  README.md  RESEARCH.md  ROADMAP.txt  START.txt  TASKS.txt
.analysis/: consolidated_wisdom.txt  technical_debt.txt
.eggs/: egg.001.meta-process-implementation.txt  egg.1.event-system-regression-analysis.txt  egg.1.examples-workshop-patterns.txt  egg.1.filename-standardization-plan.txt  egg.1.grid-layout-missing-layer.txt  egg.1.room-examples-analysis.txt  egg.1.room-mvp-codebase-analysis.txt  egg.2.room-system-features-and-screen-zone-strategy.txt
.session/: SESSION_16.md  SESSION_18.md  SESSION_19.md
benches/: runtime.rs
docs/: BOXY_API_README.md  BOXY_INTEGRATION.md  LOGGING_STRAT.md  SIMULATED_LOOP.md  STRATEGY.md
examples/: agent_chat_client.rs  audit_demo.rs  bootstrap_helper.rs  boxy_api_demo.rs  boxy_dashboard.rs  boxy_dashboard_runtime.rs  boxy_dynamic_resize.rs  boxy_grid_dynamic.rs  boxy_grid_test.rs  chat_demo.rs  chat_workshop.rs  control_room.rs  grid_showcase.rs  grid_simple.rs  mud_boxy_game.rs  (+11 more)
pilot/room_mvp/: Cargo.toml
pilot/room_mvp/examples/: chat_demo.rs
pilot/room_mvp/src/: error.rs  layout.rs  lib.rs  render.rs  tokens.rs
pilot/room_mvp/src/geometry/: core.rs
pilot/room_mvp/src/render/: mod.rs
pilot/room_mvp/src/tokens/: mod.rs
pilot/room_mvp/src/width/: mod.rs  utils.rs
pilot/room_mvp/src/zone/: mod.rs
src/: lib.rs  (+1 more)
(+88 files in other folders)
