[package]
name = "room_mvp"
version = "0.1.0"
edition = "2024"

[lib]
name = "room_mvp"
path = "src/lib.rs"

[dependencies]
rsb = { path = "../../../projects/rsb" }
crossterm = "0.29"
blake3 = "1.5"
thiserror = "2.0"
strip-ansi-escapes = "0.2"
unicode-width = "0.2"

[patch."https://github.com/oodx/rsb"]
rsb = { path = "../../projects/rsb", features = ["visuals"] }
