[package]
name = "room_mvp"
version = "0.1.0"
edition = "2024"

[lib]
name = "room_mvp"
path = "src/lib.rs"

[dependencies]
rsb = { path = "../../projects/rsb" }
crossterm = "0.27"
blake3 = "1.5"
thiserror = "1.0"
strip-ansi-escapes = "0.2"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch."https://github.com/oodx/rsb"]
rsb = { path = "../../projects/rsb" }

[dev-dependencies]
boxy = { path = "../../projects/boxy" }
rsb = { path = "../../projects/rsb", features = ["visuals"] }
criterion = "0.5"

[[bench]]
name = "runtime"
harness = false
