[package]
name = "room_mvp"
version = "0.1.0"
edition = "2024"

[lib]
name = "room_mvp"
path = "src/lib.rs"

[dependencies]
rsb = { path = "../../../../projects/rsb" }
boxy = { path = "../../../../projects/boxy" }
crossterm = "0.27"
blake3 = "1.5"
thiserror = "1.0"

[patch."https://github.com/oodx/rsb"]
rsb = { path = "../../../../projects/rsb" }
